linked with watch

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">VisualVroomAndroid</string>
+    <string name="app_name">VisualVroom</string>
 </resources>
